--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 	<!-- Disable tap highlight on IE -->
 	<meta name="msapplication-tap-highlight" content="no">
 	<!-- Add to homescreen -->
-	<link rel="manifest" href="manifest.json">
+	<link rel="manifest" href="./assets-base/manifest.json">
 	<!-- Fallback to homescreen for Chrome <39 on Android -->
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="application-name" content="AngularJS Webpack seed">
